fix: allow navbar title to wrap to multiple lines + adjust flex behavior of priority nav

--- a/packages/components/bolt-nav-priority/nav-priority.scss
+++ b/packages/components/bolt-nav-priority/nav-priority.scss
@@ -10,6 +10,8 @@ bolt-nav-priority {
   position: relative;
   align-self: center;
   padding-bottom: var(--bolt-vspacing);
+  flex-shrink: 2; // shrink faster than other components in tight spots
+  flex-grow: 0.5; // grow if space is available, but at 1/2 as much as normal
 
   @supports (display: contents) {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
